--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
+    "@types/react-facebook-login": "^4.1.0",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
+    "react-facebook-login": "^4.1.1",
     "react-scripts": "3.0.1",
     "typescript": "^3.5.3"
   },
