--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-facebook-login": "^4.1.1",
+    "react-preloaders": "^3.0.3",
+    "react-preloading-screen": "^1.0.2",
+    "react-promise-tracker": "^2.0.4",
     "react-scripts": "3.0.1",
     "typescript": "^3.5.3"
   },
