Like and Comment button fixed

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aspnet/signalr": "^1.1.4",
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
+    "@thion/react-facebook": "^6.0.15",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
@@ -15,6 +16,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
+    "react-facebook": "^8.0.4",
     "react-facebook-login": "^4.1.1",
     "react-preloaders": "^3.0.3",
     "react-preloading-screen": "^1.0.2",
